--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 
 :root {
   --body-font: 'Open Sans', sans-serif;
-  --text-color: #f8fafc;
-  --body-color: #0f172a;
+  --text-color: #c8d6e5;
+  --body-color: #576574;
 }
 
 *, ::before, ::after {
