feat: ui kit changed

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 :root {
   --body-font: 'Open Sans', sans-serif;
   --text-color: #c8d6e5;
-  --body-color: #576574;
+  --body-color: #2c3e50;
 }
 
 *, ::before, ::after {
