--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,3 +32,10 @@ button,input {
   font-family: var(--body-font);
   outline: none;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #34495e; 
+}
